force-app/main/default/objects/Order__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>