force-app/main/default/objects/Order__c/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <formula>Table__r.Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Table Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>