force-app/main/default/objects/Order__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total to Pay</label>
    <summarizedField>Invoice_Item__c.Sub_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>