force-app/main/default/objects/Order__c/fields/Total_Payed__c.field-meta.xml
<CustomField>
    <fullName>Total_Payed__c</fullName>
    <label>Total Payed</label>
    <summarizedField>Payment_Details__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_Details__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>