force-app/main/default/objects/Order__c/listViews/Active_Orders.listView-meta.xml
<ListView>
    <fullName>Active_Orders</fullName>
    <columns>NAME</columns>
    <columns>Table__c</columns>
    <columns>Table_Number__c</columns>
    <columns>Table_Position__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Activa</value>
    </filters>
    <label>Órdenes Activas</label>
</ListView>